removing more rubbish

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="India Pearce Illustration Design">
+<meta name="description" content="AstonautCreatives">
 <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-<meta name="author" content="India Pearce">
+<meta name="author" content="AstonautCreatives">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="styles/hover.min.css">
-<link rel="stylesheet" href="styles/animate.css">
 <link rel="stylesheet" type="text/css" href="styles/main.css">
 <!-- Optional theme -->
 <link rel="stylesheet" href="styles/bootstrap/css/bootstrap-theme.min.css">
@@ -22,7 +20,7 @@
 
 <body>
 <div id="app">
-<canvas @mousewheel="wheelchange" id="myCanvas" class="canvas">
+
 </div>
 </canvas>
 
