--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,4 +1,25 @@
-.canvas {
+body {
+  background-color: #05000f;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+#app {
   width: 100%;
   height: 100%;
+}
+
+#spaceship-image {
+  margin-top: 100px;
+  width: 50px;
+  height: 100px;
+}
+#spaceship {
+  position: absolute;
+  width: 50px;
+  height: 200px;
+}
+#home {
+  width: 600px;
+  height: 600px;
 }
