--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,8 @@ body {
   background-color: #05000f;
   overflow-x: hidden;
   overflow-y: hidden;
+  background-image: url(../image/Astronaughts-StarrySky.svg);
+  background-repeat: repeat;
 }
 
 #app {
