--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,12 @@
 
 <body>
 <div @mousemove="mouseMove" id="app">
+    <div id="background-back">
+    </div>
+    
+    <div id="background-front">
+    </div>
+
     <div id="spaceship">
         <img id="spaceship-image" src="image/space-ship.svg"/>
     </div>
