--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 <div @mousemove="mouseMove" id="app">
     <div id="background-back">
     </div>
-    
+
     <div id="background-front">
     </div>
 
@@ -31,7 +31,7 @@
     </div>
 
     <div id="home">
-        <img id="home-image" src="image/home-planet.svg"/>
+        <img id="home-image" src="image/Astronauts-HomePlanet.svg"/>
     </div>
 </div>
 </body>
