--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,53 @@
 </head>
 
 <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="styles/main.css">
+
 <!-- Optional theme -->
 <link rel="stylesheet" href="styles/bootstrap/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="scripts/lib/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 <script src = "scripts/lib/vue.js"></script>
 
 <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <div @mousemove="mouseMove" id="app">
     <div id="background-back">
     </div>
@@ -32,6 +68,9 @@
 
     <div id="home">
         <img id="home-image" src="image/Astronauts-HomePlanet.svg"/>
+    </div>
+
+    <div id="">
     </div>
 </div>
 </body>
