--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,19 @@
   border-radius: 0 !important;
 }
 
+img {
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+}
+
 body {
   background-color: #05000f;
   overflow-x: hidden;
@@ -61,31 +74,31 @@ body {
 }
 /* title */
 .navbar-default .navbar-brand {
-    color: #F7A54B;
+    color: #bdbdbd;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-    color: #5E5E5E;
+    color: #bdbdbd;
 }
 /* link */
 .navbar-default .navbar-nav > li > a {
-    color: #777;
+    color: #bdbdbd;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #333;
+    color: #bdbdbd;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #555;
+    color: #bdbdbd;
     background-color: #292E37;
     background-image: linear-gradient(to bottom, #292E37 0, #292E37 100%);
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-    color: #555;
+    color: #bdbdbd;
     background-color: #292E37;
 }
 /* caret */
@@ -113,14 +126,14 @@ body {
     background-color: #292E37;
 }
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #CCC;
+    background-color: #bdbdbd;
 }
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #777;
+        color: #bdbdbd;
     }
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #333;
+        color: #bdbdbd;
     }
 }
