--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+
       </button>
       <a class="navbar-brand" href="#">Astronaut Creative</a>
     </div>
@@ -43,7 +44,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div @mousemove="mouseMove" id="app">
+<div @mousemove="mouseMove" @mousedown="mouseDown" @mouseup="mouseUp" id="app">
     <div id="background-back">
     </div>
 
