--- a/templates/index.html
+++ b/templates/index.html
@@ -52,35 +52,35 @@
     </div>
 
     <div v-bind:style="{ top: planets.home.top + 'px', left: planets.home.left + 'px'}" id="home">
-        <img id="home-image" src="image/Astronauts-HomePlanet.svg"/>
+        <img id="home-image" src="image/Astronauts-HomePlanet.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.contact.top + 'px', left: planets.contact.left + 'px'}" id="contact">
-        <img id="contact-image" src="image/Astronauts-ContactPlanet.svg"/>
+        <img id="contact-image" src="image/Astronauts-ContactPlanet.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.portfolio.top + 'px', left: planets.portfolio.left + 'px'}" id="portfolio">
-        <img id="portfolio-image" src="image/Astronauts-PastProjectsPlanet.svg"/>
+        <img id="portfolio-image" src="image/Astronauts-PastProjectsPlanet.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.team.top + 'px', left: planets.team.left + 'px'}" id="team">
-        <img id="team-image" src="image/Astronauts-TeamPlanet.svg"/>
+        <img id="team-image" src="image/Astronauts-TeamPlanet.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.teamm1.top + 'px', left: planets.teamm1.left + 'px'}" id="team-m1">
-        <img id="team-m1-image" src="image/Astronauts-TeamMoon1.svg"/>
+        <img id="team-m1-image" src="image/Astronauts-TeamMoon1.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.teamm2.top + 'px', left: planets.teamm2.left + 'px'}" id="team-m2">
-        <img id="team-m2-image" src="image/Astronauts-TeamMoon2.svg"/>
+        <img id="team-m2-image" src="image/Astronauts-TeamMoon2.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: planets.teamm3.top + 'px', left: planets.teamm3.left + 'px'}" id="team-m3">
-        <img id="team-m3-image" src="image/Astronauts-TeamMoon3.svg"/>
+        <img id="team-m3-image" src="image/Astronauts-TeamMoon3.svg" draggable="false"/>
     </div>
 
     <div v-bind:style="{ top: spaceship.top + 'px', left: spaceship.left + 'px', transform: 'rotate(' + spaceship.angle + 'deg)'}" id="spaceship">
-        <img id="spaceship-image" src="image/space-ship.svg"/>
+        <img id="spaceship-image" src="image/space-ship.svg" draggable="false"/>
     </div>
 </div>
 </body>
