--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -46,15 +46,8 @@ body {
   height: 100%;
 }
 
-#spaceship-image {
-  margin-top: 100px;
-  width: 50px;
-  height: 100px;
-}
 #spaceship {
   position: absolute;
-  width: 50px;
-  height: 200px;
 }
 
 #home {
@@ -81,19 +74,19 @@ body {
   height: 300px;
 }
 
-#team-m1 {
+#teamm1 {
   position: absolute;
   width: 100px;
   height: 100px;
 }
 
-#team-m2 {
+#teamm2 {
   position: absolute;
   width: 100px;
   height: 100px;
 }
 
-#team-m3 {
+#teamm3 {
   position: absolute;
   width: 100px;
   height: 100px;
