--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -92,6 +92,14 @@ body {
   height: 100px;
 }
 
+#cornermarker {
+    position: absolute;
+    top: 100%;
+    left: 100%;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+}
 .navbar {
   z-index: 9999;
 }
